--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img src="./images/sun_icon.png" alt="" class="w-6 hidden dark:block">
             </button>
 
-            <a href="#contact" class="hidden lg:flex items-center gap-3 px-10 py-2.5 border border-grey-500 rounded-full ml-4 font-Ovo dark:border-white/50">
+            <a href="#contact" class="hidden lg:flex items-center gap-3 px-10 py-2.5 border border-gray-500 rounded-full ml-4 font-Ovo dark:border-white/50">
                 Contact 
                 <img src="./images/arrow-icon.png" alt="" class="w-3 dark:hidden">
                 <img src="./images/arrow-icon-dark.png" alt="" class="w-3 hidden dark:block">
@@ -81,7 +81,7 @@
                 contact me 
                 <img src="./images/right-arrow-white.png" alt="" class="w-4">
             </a>
-            <a href="./images/PradhyumnSinghGinnare_FlutterResume.pdf" download class="px-10 py-3 border rounded-full border-grey-500 flex items-center gap-2 bg-white dark:text-black">
+            <a href="./images/PradhyumnSinghGinnare_FlutterResume.pdf" download class="px-10 py-3 border rounded-full border-gray-500 flex items-center gap-2 bg-white dark:text-black">
                 my resume 
                 <img src="./images/download-icon.png" alt="" class="w-4">
             </a>
@@ -98,7 +98,7 @@
 
         <div class="flex w-full flex-col lg:flex-row items-center gap-20 my-20">
             
-            <div class="max-w-max mx=auto relative">
+            <div class="max-w-max mx-auto relative">
                 <img src="./images/Puru.JPG" alt="" class="w-64 sm:w-80 rounded-3xl max-w-none">
                 <!--
                 <div class="bg-white w-1/2 aspect-square absolute right-0 bottom-0 rounded-full translate-x-1/4 translate-y-1/3 shadow-[0_4px_55px_rgba(149,0,162,0.15)] flex items-center justify-center">
@@ -109,55 +109,55 @@
             </div>
             
 
-            <div class="flex-1">
-                <p class="mb-10 max-w-2xl font-Ovo">I'm a passionate Flutter developer with a strong foundation in building modern, cross-platform applications. With hands-on experience in Firebase, Appwrite, REST APIs, and intuitive UI design, I enjoy crafting seamless and scalable apps—from social platforms to real-time games.</p>
+            <div class="flex-1 px-4 sm:px-0">
+                <p class="mb-10 max-w-2xl font-Ovo text-sm sm:text-base">I'm a passionate Flutter developer with a strong foundation in building modern, cross-platform applications. With hands-on experience in Firebase, Appwrite, REST APIs, and intuitive UI design, I enjoy crafting seamless and scalable apps—from social platforms to real-time games.</p>
 
-                <ul class="grid grid-cols-1 sm:grid-cols-3 gap-6 max-w-2xl">
-                    <li class="border-[0.5px] border-grey-400 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black dark:border-white dark:hover:shadow-white dark:hover:bg-darkHover/50">
+                <ul class="grid grid-cols-1 sm:grid-cols-3 gap-4 sm:gap-6 max-w-2xl">
+                    <li class="border-[0.5px] border-gray-400 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black dark:border-white dark:hover:shadow-white dark:hover:bg-darkHover/50">
                         <img src="./images/code-icon.png" alt="" class="w-7 mt-3 dark:hidden">
                         <img src="./images/code-icon-dark.png" alt="" class="w-7 mt-3 hidden dark:block">
-                        <h3 class="my-4 font-semibold text-grey-700 dark:text-white">Tech Stack</h3>
-                        <p class="text-grey-600 text-sm dark:text-white/80">Flutter, Java, XML, Node Js, Express Js, MongoDB</p>
+                        <h3 class="my-4 font-semibold text-gray-700 dark:text-white">Tech Stack</h3>
+                        <p class="text-gray-600 text-sm dark:text-white/80">Flutter, Java, XML, Node Js, Express Js, MongoDB</p>
                     </li>
-                    <li class="border-[0.5px] border-grey-400 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black dark:border-white dark:hover:shadow-white dark:hover:bg-darkHover/50">
+                    <li class="border-[0.5px] border-gray-400 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black dark:border-white dark:hover:shadow-white dark:hover:bg-darkHover/50">
                         <img src="./images/edu-icon.png" alt="" class="w-7 mt-3 dark:hidden">
                         <img src="./images/edu-icon-dark.png" alt="" class="w-7 mt-3 hidden dark:block">
-                        <h3 class="my-4 font-semibold text-grey-700 dark:text-white">Education</h3>
-                        <p class="text-grey-600 text-sm dark:text-white/80">Master of Computer Application from SCSIT, DAVV</p>
+                        <h3 class="my-4 font-semibold text-gray-700 dark:text-white">Education</h3>
+                        <p class="text-gray-600 text-sm dark:text-white/80">Master of Computer Application from SCSIT, DAVV</p>
                     </li>
-                    <li class="border-[0.5px] border-grey-400 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black dark:border-white dark:hover:shadow-white dark:hover:bg-darkHover/50">
+                    <li class="border-[0.5px] border-gray-400 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black dark:border-white dark:hover:shadow-white dark:hover:bg-darkHover/50">
                         <img src="./images/project-icon.png" alt="" class="w-7 mt-3 dark:hidden">
                         <img src="./images/project-icon-dark.png" alt="" class="w-7 mt-3 hidden dark:block">
-                        <h3 class="my-4 font-semibold text-grey-700 dark:text-white">Projects</h3>
-                        <p class="text-grey-600 text-sm dark:text-white/80">Build more than 5 projects</p>
+                        <h3 class="my-4 font-semibold text-gray-700 dark:text-white">Projects</h3>
+                        <p class="text-gray-600 text-sm dark:text-white/80">Build more than 5 projects</p>
                     </li>
                 </ul>
 
-                <h4 class="my-6 text-grey-700 font-Ovo dark:text-white/80">Tools i use</h4>
+                <h4 class="my-6 text-gray-700 font-Ovo text-base sm:text-lg dark:text-white/80">Tools i use</h4>
 
-                <ul class="flex items-center gap-3 sm:gap-5">
-                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-grey-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
+                <ul class="grid grid-cols-4 sm:flex flex-wrap items-center gap-3 sm:gap-5">
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
                         <img src="./images/flutter.png" alt="" class="w-5 sm:w-7">
                     </li>
-                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-grey-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
                         <img src="./images/intellij.png" alt="" class="w-5 sm:w-7">
                     </li>
-                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-grey-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
                         <img src="./images/nodejs.png" alt="" class="w-5 sm:w-7">
                     </li>
-                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-grey-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
                         <img src="./images/mongodb.png" alt="" class="w-5 sm:w-7">
                     </li>
-                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-grey-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
                         <img src="./images/vscode.png" alt="" class="w-5 sm:w-7">
                     </li>
-                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-grey-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
                         <img src="./images/androidStudio.png" alt="" class="w-5 sm:w-7">
                     </li>
-                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-grey-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
                         <img src="./images/firebase.png" alt="" class="w-5 sm:w-7">
                     </li>
-                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-grey-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500">
                         <img src="./images/git.png" alt="" class="w-5 sm:w-7">
                     </li>
                 </ul>
@@ -181,7 +181,7 @@
                     <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
                         <div>
                             <h2 class="font-semibold">Teamify</h2>
-                            <p class="text-sm text-grey-700">MERN project</p>
+                            <p class="text-sm text-gray-700">MERN project</p>
                         </div>
                         <div class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
                             <img src="./images/send-icon.png" alt="" class="w-5">
@@ -195,7 +195,7 @@
                     <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
                         <div>
                             <h2 class="font-semibold">Realtor</h2>
-                            <p class="text-sm text-grey-700">MERN project</p>
+                            <p class="text-sm text-gray-700">MERN project</p>
                         </div>
                         <div class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
                             <img src="./images/send-icon.png" alt="" class="w-5">
@@ -209,7 +209,7 @@
                     <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
                         <div>
                             <h2 class="font-semibold">Lynkr</h2>
-                            <p class="text-sm text-grey-700">Flutter project</p>
+                            <p class="text-sm text-gray-700">Flutter project</p>
                         </div>
                         <div class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
                             <img src="./images/send-icon.png" alt="" class="w-5">
@@ -223,7 +223,7 @@
                     <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
                         <div>
                             <h2 class="font-semibold">To Do List</h2>
-                            <p class="text-sm text-grey-700">Flutter project</p>
+                            <p class="text-sm text-gray-700">Flutter project</p>
                         </div>
                         <div class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
                             <img src="./images/send-icon.png" alt="" class="w-5">
@@ -237,7 +237,7 @@
                     <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
                         <div>
                             <h2 class="font-semibold">BMI Calculator</h2>
-                            <p class="text-sm text-grey-700">Flutter project</p>
+                            <p class="text-sm text-gray-700">Flutter project</p>
                         </div>
                         <div class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
                             <img src="./images/send-icon.png" alt="" class="w-5">
@@ -251,7 +251,7 @@
                     <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
                         <div>
                             <h2 class="font-semibold">Snake Game</h2>
-                            <p class="text-sm text-grey-700">Flutter project</p>
+                            <p class="text-sm text-gray-700">Flutter project</p>
                         </div>
                         <div class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
                             <img src="./images/send-icon.png" alt="" class="w-5">
@@ -262,7 +262,7 @@
         </div>
 
         <!--
-        <a href="#" class="w-max flex items-center justify-center gap-2 text-grey-700 border-[0.5px] border-grey-700 rounded-full py-3 px-10 mx-auto my-20 hover:bg-lightHover duration-500 dark:text-white dark:border-white dark:hover:bg-darkHover">
+        <a href="#" class="w-max flex items-center justify-center gap-2 text-gray-700 border-[0.5px] border-gray-700 rounded-full py-3 px-10 mx-auto my-20 hover:bg-lightHover duration-500 dark:text-white dark:border-white dark:hover:bg-darkHover">
             Show more 
             <img src="./images/right-arrow-bold.png" alt="" class="w-4 dark:hidden">
             <img src="./images/right-arrow-bold-dark.png" alt="" class="w-4 hidden dark:block">
@@ -283,11 +283,11 @@
         <form method="post" action="https://api.web3forms.com/submit" class="max-w-2xl mx-auto">
             <input type="hidden" name="access_key" value="0a30a3d4-5802-4531-a104-8f2dc8c072fa">
             <div class="grid grid-cols-auto gap-6 mt-10 mb-8">
-                <input type="text" placeholder="Enter your name" class="flex-1 p-3 outline-none border-[0.5px] border-grey-400 rounded-md bg-white dark:bg-darkHover/30 dark:border-white/90" name="name" required>
-                <input type="email" placeholder="Enter your email" class="flex-1 p-3 outline-none border-[0.5px] border-grey-400 rounded-md bg-white dark:bg-darkHover/30 dark:border-white/90" name="email" required>
+                <input type="text" placeholder="Enter your name" class="flex-1 p-3 outline-none border-[0.5px] border-gray-400 rounded-md bg-white dark:bg-darkHover/30 dark:border-white/90" name="name" required>
+                <input type="email" placeholder="Enter your email" class="flex-1 p-3 outline-none border-[0.5px] border-gray-400 rounded-md bg-white dark:bg-darkHover/30 dark:border-white/90" name="email" required>
 
             </div>
-            <textarea rows="6" placeholder="Enter your message" class="w-full p-4 outline-none border-[0.5px] border-grey-400 rounded-md bg-white mb-6 dark:bg-darkHover/30 dark:border-white/90" name="message" required></textarea>
+            <textarea rows="6" placeholder="Enter your message" class="w-full p-4 outline-none border-[0.5px] border-gray-400 rounded-md bg-white mb-6 dark:bg-darkHover/30 dark:border-white/90" name="message" required></textarea>
             <button class="py-3 px-8 w-max flex items-center justify-between gap-2 bg-black/80 text-white rounded-full mx-auto hover:bg-black duration-500 dark:bg-transparent dark:border-[0.5px] dark:hover:bg-darkHover">
                 Submit now
                 <img src="./images/right-arrow-white.png" alt="" class="w-4">
@@ -310,7 +310,7 @@
             </div>
         </div>
 
-        <div class="text-center sm:flex items-center justify-between border-t border-grey-400 mx-[10%] mt-12 py-6">
+        <div class="text-center sm:flex items-center justify-between border-t border-gray-400 mx-[10%] mt-12 py-6">
             <p>© 2025 Pradhyumn Singh Ginnare. All rights reserved.</p>
             <ul class="flex items-center gap-10 justify-center mt-4 sm:mt-0">
                 <li><a href="https://github.com/PradhyumnSinghGinnare" target="_blank">Github</a></li>
